--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "caniuse-lite": "^1.0.30001692",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "three": "^0.172.0",
