--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "contra",
   "version": "1.0.0",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build && nuxt generate",
@@ -13,18 +16,19 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
-    "core-js": "^3.19.3",
-    "nuxt": "^2.15.8",
-    "vue": "^2.6.14",
+    "core-js": "^3.35.1",
+    "nuxt": "^2.17.3",
+    "vue": "^2.7.16",
     "vue-calendar-heatmap": "^0.8.4",
-    "vue-server-renderer": "^2.6.14",
-    "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0"
+    "vue-server-renderer": "^2.7.16",
+    "vue-template-compiler": "^2.7.16",
+    "webpack": "^4.47.0"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^4.2.1",
-    "eslint-config-prettier": "^8.3.0",
-    "postcss": "^8.4.4",
-    "prettier": "^2.5.1"
+    "@nuxtjs/tailwindcss": "^6.11.2",
+    "eslint-config-prettier": "^9.1.0",
+    "postcss": "^8.4.33",
+    "postcss-nesting": "^12.0.2",
+    "prettier": "^3.2.4"
   }
 }
