--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
+    "@popperjs/core": "^2.11.8",
+    "consola": "^3.2.3",
     "core-js": "^3.35.1",
     "nuxt": "^2.17.3",
     "vue": "^2.7.16",
@@ -25,7 +27,14 @@
     "webpack": "^4.47.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-transform-class-properties": "^7.25.9",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.26.6",
+    "@babel/plugin-transform-optional-chaining": "^7.25.9",
+    "@babel/plugin-transform-private-methods": "^7.25.9",
+    "@babel/plugin-transform-private-property-in-object": "^7.25.9",
     "@nuxtjs/tailwindcss": "^6.11.2",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8.4.33",
     "postcss-nesting": "^12.0.2",
